Fix ArcActiveDirectoryEnrollmentTokenFetcherBrowserTest.SamlFlowSucceedsWithAuthRetry

Handle setWindowBounds for FakeArcSupport (just do nothing). It fails
there if mash is enabled.

Bug: 859503
Change-Id: Icb99100691de2dfed753b1afbd935c0be10117eb
Reviewed-on: https://chromium-review.googlesource.com/1122620
Reviewed-by: Nico Weber <thakis@chromium.org>
Commit-Queue: Lutz Justen <ljusten@chromium.org>
Cr-Commit-Position: refs/heads/master@{#571891}
Former-commit-id: 28dbc883019925de77de86918176f9ee333ecef7